--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@shopify/flash-list": "1.6.4",
     "axios": "^1.7.2",
     "expo": "~51.0.20",
+    "expo-blur": "^13.0.2",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.8",
     "expo-image": "~1.12.13",
